--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.74.0",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
