--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@mui/material": "^7.0.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.74.0",
+    "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
